--- a/admin.html
+++ b/admin.html
@@ -179,6 +179,135 @@
             font-weight: 600;
         }
 
+        .action-buttons {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+        }
+
+        .btn-action {
+            padding: 8px 12px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 0.9em;
+            font-weight: 600;
+            transition: all 0.3s;
+            text-decoration: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .btn-edit {
+            background: #4CAF50;
+            color: white;
+        }
+
+        .btn-edit:hover {
+            background: #45a049;
+            transform: translateY(-2px);
+        }
+
+        .btn-delete {
+            background: #f44336;
+            color: white;
+        }
+
+        .btn-delete:hover {
+            background: #da190b;
+            transform: translateY(-2px);
+        }
+
+        .btn-whatsapp {
+            background: #25D366;
+            color: white;
+        }
+
+        .btn-whatsapp:hover {
+            background: #20ba5a;
+            transform: translateY(-2px);
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 5% auto;
+            padding: 30px;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        }
+
+        .modal-header {
+            margin-bottom: 20px;
+        }
+
+        .modal-header h2 {
+            color: #333;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            color: #555;
+            font-weight: 600;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 12px;
+            border: 2px solid rgba(255, 107, 157, 0.3);
+            border-radius: 8px;
+            font-size: 1em;
+        }
+
+        .form-group input:focus {
+            outline: none;
+            border-color: #ff6b9d;
+        }
+
+        .modal-buttons {
+            display: flex;
+            gap: 10px;
+            justify-content: flex-end;
+            margin-top: 20px;
+        }
+
+        .btn-cancel {
+            padding: 10px 20px;
+            background: #ccc;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+        }
+
+        .btn-save {
+            padding: 10px 20px;
+            background: linear-gradient(135deg, #ff6b9d 0%, #c06c84 100%);
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 20px;
@@ -232,6 +361,34 @@
         
         <div class="table-container">
             <div id="tableContainer" class="loading">Carregando confirmações</div>
+        </div>
+    </div>
+
+    <!-- Modal de Edição -->
+    <div id="editModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>✏️ Editar Confirmação</h2>
+            </div>
+            <form id="editForm">
+                <input type="hidden" id="editId">
+                <div class="form-group">
+                    <label for="editNome">Nome:</label>
+                    <input type="text" id="editNome" required>
+                </div>
+                <div class="form-group">
+                    <label for="editWhatsApp">WhatsApp:</label>
+                    <input type="text" id="editWhatsApp" required>
+                </div>
+                <div class="form-group">
+                    <label for="editAcompanhantes">Acompanhantes:</label>
+                    <input type="number" id="editAcompanhantes" min="0" required>
+                </div>
+                <div class="modal-buttons">
+                    <button type="button" class="btn-cancel" onclick="closeModal()">Cancelar</button>
+                    <button type="submit" class="btn-save">Salvar</button>
+                </div>
+            </form>
         </div>
     </div>
 
@@ -298,6 +455,7 @@
                             <th>Acompanhantes</th>
                             <th>Total Pessoas</th>
                             <th>Data/Hora</th>
+                            <th>Ações</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -308,6 +466,26 @@
                 const dateStr = date.toLocaleDateString('pt-BR');
                 const timeStr = date.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
 
+                // Criar link do WhatsApp
+                const whatsappNumber = conf.whatsapp.replace(/\D/g, '');
+                const mensagem = `🎉 Olá ${conf.nome}!
+
+Confirmamos sua presença no aniversário da Sayuri! 🎊
+
+📅 *Data:* 08/11/2025
+🕐 *Horário:* 20:00 horas
+
+📍 *Local:*
+Av. Ville Roy, 1744 - Caçari
+Boa Vista - RR, 69307-725
+
+🗺️ *Ver no mapa:*
+https://maps.google.com/?q=Av.+Ville+Roy,+1744,+Caçari,+Boa+Vista,+RR,69307-725
+
+Aguardamos você com muito carinho! 💖`;
+
+                const whatsappLink = `https://wa.me/55${whatsappNumber}?text=${encodeURIComponent(mensagem)}`;
+
                 html += `
                     <tr>
                         <td>${index + 1}</td>
@@ -316,6 +494,13 @@
                         <td><span class="badge">${conf.acompanhantes}</span></td>
                         <td><span class="badge">${conf.total_pessoas}</span></td>
                         <td>${dateStr} ${timeStr}</td>
+                        <td>
+                            <div class="action-buttons">
+                                <button class="btn-action btn-edit" onclick="editConfirmation(${conf.id})">✏️ Editar</button>
+                                <button class="btn-action btn-delete" onclick="deleteConfirmation(${conf.id}, '${conf.nome}')">🗑️ Excluir</button>
+                                <a href="${whatsappLink}" target="_blank" class="btn-action btn-whatsapp">📱 WhatsApp</a>
+                            </div>
+                        </td>
                     </tr>
                 `;
             });
@@ -369,6 +554,100 @@
 
             renderTable(filtered);
         });
+
+        // Editar confirmação
+        async function editConfirmation(id) {
+            const conf = allConfirmations.find(c => c.id === id);
+            if (!conf) return;
+
+            document.getElementById('editId').value = conf.id;
+            document.getElementById('editNome').value = conf.nome;
+            document.getElementById('editWhatsApp').value = conf.whatsapp;
+            document.getElementById('editAcompanhantes').value = conf.acompanhantes;
+
+            document.getElementById('editModal').style.display = 'block';
+        }
+
+        // Fechar modal
+        function closeModal() {
+            document.getElementById('editModal').style.display = 'none';
+        }
+
+        // Salvar edição
+        document.getElementById('editForm').addEventListener('submit', async function(e) {
+            e.preventDefault();
+
+            const id = document.getElementById('editId').value;
+            const nome = document.getElementById('editNome').value;
+            const whatsapp = document.getElementById('editWhatsApp').value;
+            const acompanhantes = parseInt(document.getElementById('editAcompanhantes').value);
+
+            try {
+                const response = await fetch(`${SUPABASE_URL}/rest/v1/confirmacoes?id=eq.${id}`, {
+                    method: 'PATCH',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'apikey': SUPABASE_KEY,
+                        'Authorization': `Bearer ${SUPABASE_KEY}`,
+                        'Prefer': 'return=minimal'
+                    },
+                    body: JSON.stringify({
+                        nome: nome,
+                        whatsapp: whatsapp,
+                        acompanhantes: acompanhantes,
+                        total_pessoas: acompanhantes + 1
+                    })
+                });
+
+                if (!response.ok) {
+                    throw new Error('Erro ao atualizar');
+                }
+
+                alert('✅ Confirmação atualizada com sucesso!');
+                closeModal();
+                loadConfirmations();
+
+            } catch (error) {
+                console.error('Erro:', error);
+                alert('❌ Erro ao atualizar confirmação!');
+            }
+        });
+
+        // Excluir confirmação
+        async function deleteConfirmation(id, nome) {
+            if (!confirm(`Tem certeza que deseja excluir a confirmação de ${nome}?`)) {
+                return;
+            }
+
+            try {
+                const response = await fetch(`${SUPABASE_URL}/rest/v1/confirmacoes?id=eq.${id}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'apikey': SUPABASE_KEY,
+                        'Authorization': `Bearer ${SUPABASE_KEY}`
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Erro ao excluir');
+                }
+
+                alert('✅ Confirmação excluída com sucesso!');
+                loadConfirmations();
+
+            } catch (error) {
+                console.error('Erro:', error);
+                alert('❌ Erro ao excluir confirmação!');
+            }
+        }
+
+        // Fechar modal ao clicar fora
+        window.onclick = function(event) {
+            const modal = document.getElementById('editModal');
+            if (event.target == modal) {
+                closeModal();
+            }
+        }
 
         // Carregar ao abrir a página
         loadConfirmations();
