--- a/admin.html
+++ b/admin.html
@@ -468,21 +468,36 @@
 
                 // Criar link do WhatsApp
                 const whatsappNumber = conf.whatsapp.replace(/\D/g, '');
-                const mensagem = `🎉 Olá ${conf.nome}!
+                const mensagem = `✨ *Olá ${conf.nome}!* ✨
 
-Confirmamos sua presença no aniversário da Sayuri! 🎊
+Que alegria ter você conosco! 🎊
+Sua presença está *confirmada* no aniversário da *Sayuri*!
 
-📅 *Data:* 08/11/2025
-🕐 *Horário:* 20:00 horas
+━━━━━━━━━━━━━━━━━━━
 
-📍 *Local:*
+📅 *DATA*
+08 de Novembro de 2025
+
+🕐 *HORÁRIO*
+20:00 horas
+
+📍 *LOCAL*
 Av. Ville Roy, 1744 - Caçari
 Boa Vista - RR, 69307-725
 
-🗺️ *Ver no mapa:*
+🗺️ *VER NO MAPA*
 https://maps.google.com/?q=Av.+Ville+Roy,+1744,+Caçari,+Boa+Vista,+RR,69307-725
 
-Aguardamos você com muito carinho! 💖`;
+🎁 *LISTA DE PRESENTE GO PINK*
+https://www.gopink.com.br
+
+━━━━━━━━━━━━━━━━━━━
+
+💝 Aguardamos você com muito carinho!
+
+_Qualquer dúvida, é só responder esta mensagem._
+
+🎈 Nos vemos lá! 🎈`;
 
                 const whatsappLink = `https://wa.me/55${whatsappNumber}?text=${encodeURIComponent(mensagem)}`;
 
